# sensorsim

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
include/ss/: fault.h  golden.h  multifault.h  sensor.h
python/: README.md  pyproject.toml
python/sensorsim/: __init__.py  cli.py  config.py  harness.py
python/tests/: test_harness.py
src/: fault.c  golden.c  multifault.c  sensor.c  sensorsim.c
tests/: test_fault.c  test_golden.c  test_sensor.c  test_v4_multifault.c
