[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensorsim"
version = "0.1.0"
description = "Python orchestrator for the sensorsim C simulator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SAY-5" }]
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
sensorsim = "sensorsim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sensorsim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
